fix: scroll overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,7 +7,7 @@ body {
 }
 
 section {
-    @apply w-full py-4 mb-10;
+    @apply w-full py-4;
 }
 
 p {
